--- a/.github/workflows/neon.yml
+++ b/.github/workflows/neon.yml
@@ -42,10 +42,9 @@ jobs:
         id: create_neon_branch
         uses: neondatabase/create-branch-action@v6
         with:
-          project_id: ${{ vars.falling-union-65111930
- }}
+          project_id: ${{ secrets.NEON_PROJECT_ID }}
           branch_name: preview/pr-${{ github.event.number }}-${{ needs.setup.outputs.branch }}
-          api_key: ${{ secrets.napi_5j8t6guc0hu7fzu3xnooks5qhehq8gaih92k9vdu519w7ay42pephyvt50kgdyn1 }}
+          api_key: ${{ secrets.NEON_API_KEY }}
           expires_at: ${{ env.EXPIRES_AT }}
 
 # The step above creates a new Neon branch.
@@ -80,10 +79,9 @@ jobs:
 #      - name: Post Schema Diff Comment to PR
 #        uses: neondatabase/schema-diff-action@v1
 #        with:
-#          project_id: ${{ vars.falling-union-65111930
- }}
+#          project_id: ${{ secrets.NEON_PROJECT_ID }}
 #          compare_branch: preview/pr-${{ github.event.number }}-${{ needs.setup.outputs.branch }}
-#          api_key: ${{ secrets.napi_5j8t6guc0hu7fzu3xnooks5qhehq8gaih92k9vdu519w7ay42pephyvt50kgdyn1 }}
+#          api_key: ${{ secrets.NEON_API_KEY }}
 
   delete_neon_branch:
     name: Delete Neon Branch
@@ -94,7 +92,6 @@ jobs:
       - name: Delete Neon Branch
         uses: neondatabase/delete-branch-action@v3
         with:
-          project_id: ${{ vars.falling-union-65111930
- }}
+          project_id: ${{ secrets.NEON_PROJECT_ID }}
           branch: preview/pr-${{ github.event.number }}-${{ needs.setup.outputs.branch }}
-          api_key: ${{ secrets.napi_5j8t6guc0hu7fzu3xnooks5qhehq8gaih92k9vdu519w7ay42pephyvt50kgdyn1 }}
+          api_key: ${{ secrets.NEON_API_KEY }}
